# plinear

./: .gitignore  LICENSE  README.md  pyproject.toml  test_code.py
.github/workflows/: ci.yml
Experiments/bctnn_circuits/: cifar100_vit_transformers.py
Experiments/binarization_of_ternary_neural_networks/: CIFAR_100_btViT.py  ImageNet_1k_btViT.py  ImageNet_32_ConvMix_example.py  ImageNet_32_btViT.py  ImageNet_CNN_example.py  ImageNet_ResNet18_example.py  ImageNet_vit_example.py  epoch_metrics.csv  iteration_metrics.csv  mnist_cnn_example.py  mnist_vit_example.py
Experiments/binarization_of_ternary_neural_networks/ImageNet_1k_btViT/: 256-6 epoch_metrics.csv  256-6 test_results.csv  256-6 validation_results.csv
Experiments/binarization_of_ternary_neural_networks/ImageNet_32_ConvMix/: 256-12 epoch_metrics.csv  256-12 test_results.csv  256-8 epoch_metrics.csv  256-8 validation_results.csv
Experiments/binarization_of_ternary_neural_networks/ImageNet_32_btViT/: 256-6 epoch_metrics.csv  (+2 more)
Experiments/mnist/: exp.py
Experiments/rl_nand_network/: train.py
Experiments/sparse_btnn_based_nand_gated_neural_networks/: data.py  experiment.py  model.py  visualizer.py
bctnn/: linear.py
btnn/: conv.py  linear.py
code_for_paper/: test_cifar100.py  test_mnist.py  test_mnist_c.py
code_for_paper/comparing_accuracy_of_sign_quantized_layers/: bitLinear.py  naiveSTE.py  test_code.py
code_for_paper/comparing_accuracy_of_ternary_neural_networks/: bitLinear.py  ternaries.py  test_code.py  vis.py
core/: binarizer.py  posNet.py
docs/: dev_logs.md
docs/ideanotes/: 0001.md
docs/studies/: basic_idea.md
models/: vit_example.py
plinear/: __init__.py  plinear.py  tester.py  vis.py  visualization.py
plinear/bctnn/: linear.py
plinear/blocks/: __init__.py  bctnnAttention.py  btnnAttention.py
plinear/btnn/: RMSNorm.py  __init__.py  conv.py  conv1d.py  linear.py
plinear/core/: RMSNorm.py  __init__.py
plinear/layers/: __init__.py  sparse_btnn.py
plinear/models/: CAS_ViT.py  __init__.py  bctViT.py  btViT.py  cnn_example.py  convMixer.py  nand_gate_neural_networks.py  vit_example.py
tests/: common.py  test_basic.py  test_basic_c.py  test_cifar10.py  test_cifar100.py  test_mnist.py  test_mnist_c.py
